removed eslint tailwind and typed as any user

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,6 @@
 {
   "extends": [
-    "next/core-web-vitals",
-    "tailwindcss/recommended"
+    "next/core-web-vitals"
   ],
   "overrides": [
     {
