landing completed and auth functions for existing users works, need to add wrong credentials error handling

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": [
     "next/core-web-vitals",
+    "prettier",
     "plugin:tailwindcss/recommended",
     "plugin:testing-library/react",
     "plugin:jest-dom/recommended"
