--- a/package.json
+++ b/package.json
@@ -20,24 +20,27 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@vercel/analytics": "^1.1.1",
     "aws-sdk": "^2.1478.0",
+    "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "lucide-react": "^0.287.0",
-    "next": "13.5.5",
-    "next-auth": "^4.24.3",
+    "lucide-react": "^0.288.0",
+    "next": "^13.5.6",
+    "next-auth": "^4.23.2",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.2.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "sharp": "^0.32.6",
     "sonner": "^1.0.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-animated": "^1.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -51,15 +54,21 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/parser": "^6.8.0",
-    "autoprefixer": "^10",
-    "eslint": "^8",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.52.0",
     "eslint-config-next": "13.5.5",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-jest-dom": "^5.1.0",
+    "eslint-plugin-tailwindcss": "^3.13.0",
+    "eslint-plugin-testing-library": "^6.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "postcss": "^8",
+    "postcss": "^8.4.31",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.6",
     "prisma": "^5.4.2",
-    "tailwindcss": "^3",
+    "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
-    "typescript": "^5"
+    "typescript": "^5.2.2"
   }
 }
