--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@radix-ui/themes": "^2.0.0",
     "@vercel/analytics": "^1.1.1",
     "aws-sdk": "^2.1478.0",
     "axios": "^1.5.1",
