--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "test": "jest --watchAll"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.435.0",
     "@hookform/resolvers": "^3.3.2",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@paypal/checkout-server-sdk": "^1.0.3",
     "@paypal/react-paypal-js": "^8.1.3",
+    "@pinecone-database/pinecone": "^1.1.2",
     "@prisma/client": "^5.4.2",
     "@radix-ui/react-dialog": "1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -23,19 +25,22 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@radix-ui/themes": "^2.0.0",
+    "@tanstack/react-query": "^5.0.5",
     "@vercel/analytics": "^1.1.1",
-    "aws-sdk": "^2.1478.0",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "langchain": "^0.0.172",
     "lucide-react": "^0.288.0",
     "next": "^13.5.6",
     "next-auth": "^4.23.2",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.2.1",
+    "pdf-parse": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
     "sharp": "^0.32.6",
     "sonner": "^1.0.3",
@@ -54,6 +59,7 @@
     "@types/paypal__checkout-server-sdk": "^1.0.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-dropzone": "^5.1.0",
     "@typescript-eslint/parser": "^6.8.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.52.0",
