--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio",
+    "db:generate": "prisma generate",
+    "db:all": "prisma db push && prisma generate",
+    "db:dev": "prisma migrate dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -16,7 +21,7 @@
     "@paypal/checkout-server-sdk": "^1.0.3",
     "@paypal/react-paypal-js": "^8.1.3",
     "@pinecone-database/pinecone": "^1.1.2",
-    "@prisma/client": "^5.4.2",
+    "@prisma/client": "^5.5.2",
     "@radix-ui/react-dialog": "1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
@@ -26,14 +31,16 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@radix-ui/themes": "^2.0.0",
     "@tanstack/react-query": "^5.0.5",
+    "@tanstack/react-query-next-experimental": "^5.5.0",
     "@vercel/analytics": "^1.1.1",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "langchain": "^0.0.172",
     "lucide-react": "^0.288.0",
-    "next": "^13.5.6",
+    "next": "13.5.6",
     "next-auth": "^4.23.2",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.2.1",
@@ -50,16 +57,17 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.0.5",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
     "@types/bcrypt": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/next-pwa": "^5.6.8",
     "@types/node": "^20",
     "@types/paypal__checkout-server-sdk": "^1.0.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/react-dropzone": "^5.1.0",
     "@typescript-eslint/parser": "^6.8.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.52.0",
@@ -73,7 +81,7 @@
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
-    "prisma": "^5.4.2",
+    "prisma": "^5.5.2",
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
