--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,10 +23,10 @@
       }
     ],
     "paths": {
-      "@/*": [
+      "~/*": [
         "./*"
       ],
-      "@/shadcn/*": [
+      "~/shadcn/*": [
         "./components/ui/*"
       ]
     }
@@ -36,7 +36,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "next.config.js",
+    "next.config.mjs",
     "jest.setup.js",
     "jest.config.js",
   ],
