Update code with various changes, including OpenAI langchain and pinecone embeddings

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,8 +5,7 @@
     "plugin:tailwindcss/recommended",
     "plugin:testing-library/react",
     "plugin:jest-dom/recommended",
-    "plugin:@tanstack/eslint-plugin-query/recommended",
-    "@tanstack/query"
+    "plugin:@tanstack/eslint-plugin-query/recommended"
   ],
   "overrides": [
     {
