--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@paypal/checkout-server-sdk": "^1.0.3",
     "@paypal/react-paypal-js": "^8.1.3",
+    "@pinecone-database/doc-splitter": "^0.0.1",
     "@pinecone-database/pinecone": "^1.1.2",
     "@prisma/client": "^5.5.2",
     "@radix-ui/react-dialog": "1.0.4",
@@ -33,17 +34,19 @@
     "@tanstack/react-query": "^5.0.5",
     "@tanstack/react-query-next-experimental": "^5.5.0",
     "@vercel/analytics": "^1.1.1",
-    "axios": "^1.5.1",
+    "aws-crt": "^1.18.3",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "jsonwebtoken": "^9.0.2",
+    "geist": "^1.0.0",
     "langchain": "^0.0.172",
     "lucide-react": "^0.288.0",
+    "mercadopago": "^2.0.3",
     "next": "13.5.6",
-    "next-auth": "^4.23.2",
+    "next-auth": "4.23.2",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.2.1",
+    "openai": "^4.15.0",
     "pdf-parse": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -62,7 +65,6 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
     "@types/bcrypt": "^5.0.1",
-    "@types/jsonwebtoken": "^9.0.4",
     "@types/next-pwa": "^5.6.8",
     "@types/node": "^20",
     "@types/paypal__checkout-server-sdk": "^1.0.7",
