--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tanstack/react-query": "^5.0.5",
     "@tanstack/react-query-next-experimental": "^5.5.0",
     "@vercel/analytics": "^1.1.1",
+    "ai": "^2.2.22",
     "aws-crt": "^1.18.3",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
@@ -47,6 +48,7 @@
     "next-pwa": "^5.6.0",
     "next-themes": "^0.2.1",
     "openai": "^4.15.0",
+    "openai-edge": "^1.2.2",
     "pdf-parse": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
