--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,9 @@
   ],
   "rules": {
     "@tanstack/query/exhaustive-deps": "error",
-    "@tanstack/query/stable-query-client": "error"
+    "@tanstack/query/stable-query-client": "error",
+    "no-unused-vars": "warn",
+    "no-unused-expressions": "warn",
+    "no-unused-labels": "warn"
   }
 }
