--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "prisma": "^5.5.2",
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
 }
