--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "test": "jest --watchAll"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.6",
     "@aws-sdk/client-s3": "^3.435.0",
     "@hookform/resolvers": "^3.3.2",
-    "@next-auth/prisma-adapter": "^1.0.7",
     "@paypal/checkout-server-sdk": "^1.0.3",
     "@paypal/react-paypal-js": "^8.1.3",
     "@pinecone-database/doc-splitter": "^0.0.1",
@@ -42,9 +42,8 @@
     "langchain": "^0.0.172",
     "lucide-react": "^0.288.0",
     "mercadopago": "^2.0.3",
-    "next": "13.5.6",
+    "next": "14.0.3",
     "next-auth": "4.23.2",
-    "next-pwa": "^5.6.0",
     "next-themes": "^0.2.1",
     "openai": "^4.15.0",
     "openai-edge": "^1.2.2",
