--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@radix-ui/react-dialog": "1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@radix-ui/themes": "^2.0.0",
     "@tanstack/react-query": "^5.0.5",
+    "@types/md5": "^2.3.5",
     "@vercel/analytics": "^1.1.1",
     "ai": "^2.2.22",
     "aws-crt": "^1.18.3",
@@ -41,6 +43,7 @@
     "geist": "^1.0.0",
     "langchain": "^0.0.172",
     "lucide-react": "^0.288.0",
+    "md5": "^2.3.0",
     "mercadopago": "^2.0.3",
     "next": "14.0.3",
     "next-auth": "4.23.2",
