--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@paypal/react-paypal-js": "^8.1.3",
     "@pinecone-database/doc-splitter": "^0.0.1",
     "@pinecone-database/pinecone": "^1.1.2",
-    "@prisma/client": "^5.5.2",
+    "@prisma/client": "^5.6.0",
     "@radix-ui/react-dialog": "1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
@@ -37,6 +37,7 @@
     "@vercel/analytics": "^1.1.1",
     "ai": "^2.2.22",
     "aws-crt": "^1.18.3",
+    "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -85,7 +86,7 @@
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
-    "prisma": "^5.5.2",
+    "prisma": "^5.6.0",
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
