Fix layout and component styles

--- a/package.json
+++ b/package.json
@@ -32,12 +32,11 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@radix-ui/themes": "^2.0.0",
+    "@react-email/components": "^0.0.11",
     "@tanstack/react-query": "^5.0.5",
-    "@types/md5": "^2.3.5",
     "@vercel/analytics": "^1.1.1",
     "ai": "^2.2.22",
     "aws-crt": "^1.18.3",
-    "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -56,6 +55,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
+    "resend": "^2.0.0",
     "sharp": "^0.32.6",
     "sonner": "^1.0.3",
     "tailwind-merge": "^1.14.0",
@@ -69,7 +69,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
     "@types/bcrypt": "^5.0.1",
-    "@types/mdx": "^2.0.10",
+    "@types/md5": "^2.3.5",
     "@types/node": "^20",
     "@types/paypal__checkout-server-sdk": "^1.0.7",
     "@types/react": "^18",
