--- a/package.json
+++ b/package.json
@@ -32,7 +32,17 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@radix-ui/themes": "^2.0.0",
-    "@react-email/components": "^0.0.11",
+    "@react-email/body": "0.0.4",
+    "@react-email/container": "0.0.10",
+    "@react-email/font": "0.0.4",
+    "@react-email/head": "0.0.6",
+    "@react-email/heading": "0.0.9",
+    "@react-email/hr": "0.0.6",
+    "@react-email/html": "0.0.6",
+    "@react-email/img": "0.0.6",
+    "@react-email/link": "0.0.6",
+    "@react-email/render": "0.0.9",
+    "@react-email/text": "0.0.6",
     "@tanstack/react-query": "^5.0.5",
     "@vercel/analytics": "^1.1.1",
     "ai": "^2.2.22",
