--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "db:generate": "prisma generate",
     "db:all": "prisma db push && prisma generate",
     "db:dev": "prisma migrate dev",
+    "email": "email dev --port 3600",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -42,6 +43,7 @@
     "@react-email/img": "0.0.6",
     "@react-email/link": "0.0.6",
     "@react-email/render": "0.0.9",
+    "@react-email/section": "^0.0.10",
     "@react-email/text": "0.0.6",
     "@tanstack/react-query": "^5.0.5",
     "@vercel/analytics": "^1.1.1",
@@ -101,6 +103,6 @@
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.2"
   }
 }
