--- a/package.json
+++ b/package.json
@@ -88,12 +88,12 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/parser": "^6.8.0",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.52.0",
-    "eslint-config-next": "13.5.5",
+    "eslint": "^8.54.0",
+    "eslint-config-next": "^14.0.3",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-jest-dom": "^5.1.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
-    "eslint-plugin-testing-library": "^6.1.0",
+    "eslint-plugin-testing-library": "^6.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.31",
