--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "md5": "^2.3.0",
     "mercadopago": "^2.0.3",
     "next": "14.0.3",
-    "next-auth": "4.23.2",
+    "next-auth": "^5.0.0-beta.3",
     "next-themes": "^0.2.1",
     "openai": "^4.15.0",
     "openai-edge": "^1.2.2",
