Add poweredByHeader: false and serverComponentsExternalPackages: ['argon2'] to next.config.mjs

--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
 		"@tanstack/react-query": "^5.0.5",
 		"@vercel/analytics": "^1.1.1",
 		"ai": "^2.2.22",
+		"argon2": "^0.31.2",
 		"aws-crt": "^1.18.3",
-		"bcrypt": "^5.1.1",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
 		"geist": "^1.0.0",
@@ -55,7 +55,7 @@
 		"lucide-react": "^0.288.0",
 		"md5": "^2.3.0",
 		"mercadopago": "^2.0.3",
-		"next": "14.0.3",
+		"next": "^14.0.3",
 		"next-auth": "^5.0.0-beta.3",
 		"next-themes": "^0.2.1",
 		"openai": "^4.15.0",
@@ -78,7 +78,6 @@
 		"@testing-library/jest-dom": "^6.1.4",
 		"@testing-library/react": "^14.0.0",
 		"@testing-library/user-event": "^14.5.1",
-		"@types/bcrypt": "^5.0.1",
 		"@types/md5": "^2.3.5",
 		"@types/node": "^20",
 		"@types/paypal__checkout-server-sdk": "^1.0.7",
