--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"test": "jest --watchAll"
+		"test": "cypress open"
 	},
 	"dependencies": {
 		"@auth/prisma-adapter": "^1.0.6",
 		"@aws-sdk/client-s3": "^3.435.0",
 		"@hookform/resolvers": "^3.3.2",
+		"@mercadopago/sdk-js": "^0.0.3",
+		"@mercadopago/sdk-react": "^0.0.15",
 		"@pinecone-database/doc-splitter": "^0.0.1",
 		"@pinecone-database/pinecone": "^1.1.2",
 		"@prisma/client": "^5.6.0",
@@ -82,6 +84,7 @@
 		"@types/react-dom": "^18",
 		"@typescript-eslint/parser": "^6.8.0",
 		"autoprefixer": "^10.4.16",
+		"cypress": "^13.6.0",
 		"eslint": "^8.54.0",
 		"eslint-config-next": "^14.0.3",
 		"eslint-config-prettier": "^9.0.0",
