--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,8 @@
 		"strict": true,
 		"noEmit": true,
 		"esModuleInterop": true,
-		"module": "esnext",
-		"moduleResolution": "bundler",
+		"module": "es2015",
+		"moduleResolution": "Bundler",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"jsx": "preserve",
@@ -41,6 +41,12 @@
 		"jest.config.ts",
 		"build/types/**/*.ts"
 	],
+	"ts-node": {
+		"compilerOptions": {
+			"module": "ESNext",
+			"moduleResolution": "Node"
+		}
+	},
 	"exclude": [
 		"node_modules"
 	]
