Add ProgressProvider to layout component

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"mercadopago": "^2.0.5",
 		"next": "^14.0.3",
 		"next-auth": "^5.0.0-beta.3",
+		"next-nprogress-bar": "^2.1.2",
 		"next-themes": "^0.2.1",
 		"openai": "^4.15.0",
 		"openai-edge": "^1.2.2",
