--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,8 @@
 		"strict": true,
 		"noEmit": true,
 		"esModuleInterop": true,
-		"module": "ESNext",
-		"moduleResolution": "Bundler",
+		"module": "esnext",
+		"moduleResolution": "bundler",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"jsx": "preserve",
@@ -38,10 +38,14 @@
 		"**/*.tsx",
 		".next/types/**/*.ts",
 		"next.config.mjs",
-		"jest.setup.ts",
-		"jest.config.ts",
 		"build/types/**/*.ts"
 	],
+	"ts-node": {
+		"compilerOptions": {
+			"module": "ESNext",
+			"moduleResolution": "Node"
+		}
+	},
 	"exclude": [
 		"node_modules"
 	]
