--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,19 +9,19 @@
 	],
 	"screenshots": [
 		{
-			"src": "/screenshots/screenshot",
+			"src": "./screenshots/screenshot",
 			"sizes": "1028x2402",
 			"type": "image/png",
 			"label": "Pantalla de inicio de PDFizado"
 		},
 		{
-			"src": "/screenshots/screenshot-2",
+			"src": "./screenshots/screenshot-2",
 			"sizes": "1028x2402",
 			"type": "image/png",
 			"label": "Login de PDFizado"
 		},
 		{
-			"src": "/screenshots/screenshot-3",
+			"src": "./screenshots/screenshot-3",
 			"sizes": "1028x2402",
 			"type": "image/png",
 			"label": "Dashboard de PDFizado"
