--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"@react-email/text": "0.0.6",
 		"@tanstack/react-query": "^5.0.5",
 		"@vercel/analytics": "^1.1.1",
+		"@vercel/speed-insights": "^1.0.0",
 		"ai": "^2.2.22",
 		"argon2": "^0.31.2",
 		"class-variance-authority": "^0.7.0",
@@ -59,7 +60,7 @@
 		"md5": "^2.3.0",
 		"mercadopago": "^2.0.5",
 		"next": "^14.0.3",
-		"next-auth": "^5.0.0-beta.3",
+		"next-auth": "^5.0.0-beta.4",
 		"next-nprogress-bar": "^2.1.2",
 		"next-themes": "^0.2.1",
 		"openai": "^4.15.0",
