--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,11 @@
 {
-    "trailingComma": "es5",
-    "semi": true,
-    "tabWidth": 4,
-    "singleQuote": true,
-    "jsxSingleQuote": true,
-    "plugins": [
-        "prettier-plugin-tailwindcss"
-    ]
+	"trailingComma": "es5",
+	"semi": true,
+	"tabWidth": 4,
+	"singleQuote": true,
+	"jsxSingleQuote": true,
+	"plugins": [
+		"prettier-plugin-tailwindcss",
+		"prettier-plugin-prisma"
+	]
 }
