--- a/package.json
+++ b/package.json
@@ -35,18 +35,20 @@
 		"@radix-ui/react-tabs": "^1.0.4",
 		"@radix-ui/react-tooltip": "^1.0.7",
 		"@radix-ui/themes": "^2.0.0",
-		"@react-email/body": "0.0.4",
-		"@react-email/container": "0.0.10",
-		"@react-email/font": "0.0.4",
-		"@react-email/head": "0.0.6",
-		"@react-email/heading": "0.0.9",
-		"@react-email/hr": "0.0.6",
-		"@react-email/html": "0.0.6",
-		"@react-email/img": "0.0.6",
-		"@react-email/link": "0.0.6",
+		"@react-email/body": "^0.0.7",
+		"@react-email/components": "^0.0.12",
+		"@react-email/container": "^0.0.11",
+		"@react-email/font": "^0.0.5",
+		"@react-email/head": "^0.0.7",
+		"@react-email/heading": "^0.0.11",
+		"@react-email/hr": "^0.0.7",
+		"@react-email/html": "^0.0.7",
+		"@react-email/img": "^0.0.7",
+		"@react-email/link": "^0.0.7",
 		"@react-email/render": "0.0.9",
-		"@react-email/section": "^0.0.10",
-		"@react-email/text": "0.0.6",
+		"@react-email/section": "^0.0.11",
+		"@react-email/text": "^0.0.7",
+		"@t3-oss/env-nextjs": "^0.7.1",
 		"@tanstack/react-query": "^5.0.5",
 		"@vercel/analytics": "^1.1.1",
 		"@vercel/speed-insights": "^1.0.0",
@@ -58,20 +60,18 @@
 		"langchain": "^0.0.172",
 		"lucide-react": "^0.294.0",
 		"md5": "^2.3.0",
-		"mercadopago": "^2.0.5",
 		"next": "^14.0.4",
 		"next-auth": "^5.0.0-beta.4",
 		"next-nprogress-bar": "^2.1.2",
 		"next-themes": "^0.2.1",
-		"openai": "^4.15.0",
 		"openai-edge": "^1.2.2",
 		"pdf-parse": "^1.1.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-dropzone": "^14.2.3",
-		"react-hook-form": "^7.47.0",
+		"react-hook-form": "^7.48.2",
 		"resend": "^2.0.0",
-		"sharp": "^0.32.6",
+		"sharp": "^0.33.0",
 		"sonner": "^1.0.3",
 		"tailwind-merge": "^1.14.0",
 		"tailwindcss-animate": "^1.0.7",
@@ -81,21 +81,22 @@
 	"devDependencies": {
 		"@tanstack/eslint-plugin-query": "^5.0.5",
 		"@types/md5": "^2.3.5",
-		"@types/node": "^20",
-		"@types/react": "^18",
-		"@types/react-dom": "^18",
-		"@typescript-eslint/parser": "^6.8.0",
+		"@types/node": "^20.10.4",
+		"@types/react": "^18.2.42",
+		"@types/react-dom": "^18.2.17",
+		"@typescript-eslint/parser": "^6.13.2",
 		"autoprefixer": "^10.4.16",
 		"cypress": "^13.6.0",
-		"eslint": "^8.54.0",
-		"eslint-config-next": "^14.0.3",
+		"eslint": "^8.55.0",
+		"eslint-config-next": "^14.0.4",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-tailwindcss": "^3.13.0",
-		"postcss": "^8.4.31",
+		"postcss": "^8.4.32",
 		"prettier": "^3.0.3",
+		"prettier-plugin-prisma": "^5.0.0",
 		"prettier-plugin-tailwindcss": "^0.5.6",
 		"prisma": "^5.6.0",
-		"tailwindcss": "^3.3.3",
-		"typescript": "^5.3.2"
+		"tailwindcss": "^3.3.6",
+		"typescript": "^5.3.3"
 	}
 }
