--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,8 +18,8 @@
 	"rules": {
 		"@tanstack/query/exhaustive-deps": "error",
 		"@tanstack/query/stable-query-client": "error",
-		"no-unused-vars": "warn",
-		"no-unused-expressions": "warn",
-		"no-unused-labels": "warn"
+		"no-unused-vars": "error",
+		"no-unused-expressions": "error",
+		"no-unused-labels": "error"
 	}
 }
