--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"test": "playwright test --ui"
+		"test": "playwright test"
 	},
 	"dependencies": {
 		"@auth/prisma-adapter": "^1.0.10",
