--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
 		"react-dom": "^18.2.0",
 		"react-dropzone": "^14.2.3",
 		"react-hook-form": "^7.48.2",
+		"react-markdown": "^9.0.1",
+		"remark-gfm": "^4.0.0",
 		"resend": "^2.0.0",
 		"sharp": "^0.33.0",
 		"sonner": "^1.3.1",
