--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 		"next-themes": "^0.2.1",
 		"openai-edge": "^1.2.2",
 		"pdf-parse": "^1.1.1",
+		"plaiceholder": "^3.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-dropzone": "^14.2.3",
