Added env variable to playwright yaml

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -25,6 +25,7 @@ env:
     NEXT_PUBLIC_S3_REGION: ${{secrets.NEXT_PUBLIC_S3_REGION}}
     NEXT_PUBLIC_MERCADOPAGO_PUBLIC: ${{secrets.NEXT_PUBLIC_MERCADOPAGO_PUBLIC}}
     NEXT_PUBLIC_PAYPAL_CLIENT_ID: ${{secrets.NEXT_PUBLIC_PAYPAL_CLIENT_ID}}
+    CLOUDFRONT_HOST: ${{secrets.CLOUDFRONT_HOST}}
 jobs:
     test:
         timeout-minutes: 60
