--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
 		"langchain": "^0.0.172",
 		"lucide-react": "^0.294.0",
 		"md5": "^2.3.0",
+		"million": "^2.6.4",
 		"next": "^14.0.4",
 		"next-auth": "^5.0.0-beta.4",
 		"next-nprogress-bar": "^2.1.2",
