--- a/components.json
+++ b/components.json
@@ -10,7 +10,7 @@
 		"cssVariables": true
 	},
 	"aliases": {
-		"components": "~/shadcn",
+		"components": "@/components/ui",
 		"utils": "~/lib/utils"
 	}
 }
