--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
 		"react-dom": "^18.2.0",
 		"react-dropzone": "^14.2.3",
 		"react-hook-form": "^7.48.2",
+		"react-resizable-panels": "^1.0.9",
 		"resend": "^2.0.0",
 		"sharp": "^0.32.6",
 		"sonner": "^1.3.1",
