--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@auth/prisma-adapter": "^1.0.10",
 		"@aws-sdk/client-s3": "^3.435.0",
 		"@hookform/resolvers": "^3.3.2",
+		"@paddle/paddle-js": "^0.5.5",
 		"@pinecone-database/doc-splitter": "^0.0.1",
 		"@pinecone-database/pinecone": "^1.1.2",
 		"@prisma/client": "^5.8.0",
@@ -35,7 +36,7 @@
 		"@radix-ui/react-tooltip": "^1.0.7",
 		"@radix-ui/themes": "^2.0.0",
 		"@react-email/body": "^0.0.7",
-		"@react-email/components": "^0.0.12",
+		"@react-email/components": "^0.0.14",
 		"@react-email/container": "^0.0.11",
 		"@react-email/font": "^0.0.5",
 		"@react-email/head": "^0.0.7",
@@ -60,7 +61,7 @@
 		"lucide-react": "^0.294.0",
 		"md5": "^2.3.0",
 		"million": "^2.6.4",
-		"next": "^14.0.4",
+		"next": "^14.1.0",
 		"next-auth": "^5.0.0-beta.4",
 		"next-nprogress-bar": "^2.1.2",
 		"next-themes": "^0.2.1",
@@ -70,6 +71,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-dropzone": "^14.2.3",
+		"react-email": "^2.0.0",
 		"react-hook-form": "^7.48.2",
 		"react-resizable-panels": "^1.0.9",
 		"resend": "^2.0.0",
@@ -90,7 +92,7 @@
 		"@typescript-eslint/parser": "^6.13.2",
 		"autoprefixer": "^10.4.16",
 		"eslint": "^8.55.0",
-		"eslint-config-next": "^14.0.4",
+		"eslint-config-next": "^14.1.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-tailwindcss": "^3.13.0",
 		"postcss": "^8.4.32",
@@ -98,7 +100,7 @@
 		"prettier-plugin-prisma": "^5.0.0",
 		"prettier-plugin-tailwindcss": "^0.5.6",
 		"prisma": "^5.8.0",
-		"tailwindcss": "^3.3.6",
+		"tailwindcss": "^3.4.1",
 		"typescript": "^5.3.3"
 	}
 }
