Update CI/CD schema

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -8,7 +8,6 @@ env:
     DATABASE_URL: ${{secrets.DATABASE_URL}}
     AUTH_URL: ${{secrets.AUTH_URL}}
     AUTH_SECRET: ${{secrets.AUTH_SECRET}}
-    MERCADOPAGO_SECRET: ${{secrets.MERCADOPAGO_SECRET}}
     PAYPAL_SECRET_ID: ${{secrets.PAYPAL_SECRET_ID}}
     RESEND_API_KEY: ${{secrets.RESEND_API_KEY}}
     GOOGLE_PUBLIC_ID: ${{secrets.GOOGLE_PUBLIC_ID}}
@@ -19,12 +18,14 @@ env:
     PINECONE_ENVIRONMENT: ${{secrets.PINECONE_ENVIRONMENT}}
     PINECONE_INDEX: ${{secrets.PINECONE_INDEX}}
     PINECONE_REGION: ${{secrets.PINECONE_REGION}}
+    LEMON_SQUEEZY_SECRET: ${{secrets.AUTH_SECRET}}
     NEXT_PUBLIC_S3_PUBLIC: ${{secrets.NEXT_PUBLIC_S3_PUBLIC}}
     NEXT_PUBLIC_S3_SECRET: ${{secrets.NEXT_PUBLIC_S3_SECRET}}
     NEXT_PUBLIC_S3_BUCKET: ${{secrets.NEXT_PUBLIC_S3_BUCKET}}
     NEXT_PUBLIC_S3_REGION: ${{secrets.NEXT_PUBLIC_S3_REGION}}
     NEXT_PUBLIC_MERCADOPAGO_PUBLIC: ${{secrets.NEXT_PUBLIC_MERCADOPAGO_PUBLIC}}
     NEXT_PUBLIC_PAYPAL_CLIENT_ID: ${{secrets.NEXT_PUBLIC_PAYPAL_CLIENT_ID}}
+    NEXT_PUBLIC_PADDLE_CLIENT: ${{secrets.NEXT_PUBLIC_PADDLE_CLIENT}}
     CLOUDFRONT_HOST: ${{secrets.CLOUDFRONT_HOST}}
 jobs:
     test:
