--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"test": "playwright test"
+		"test": "playwright test",
+		"vercel-build": "pnpm run migrate && vercel --prod",
+		"migrate": "prisma migrate deploy --preview-feature && pnpm run generate",
+		"generate": "prisma generate"
 	},
 	"dependencies": {
 		"@auth/prisma-adapter": "^1.0.10",
