--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
 		"start": "next start",
 		"lint": "next lint",
 		"test": "playwright test",
-		"vercel-build": "pnpm run migrate && vercel --prod",
-		"migrate": "prisma migrate deploy --preview-feature && pnpm run generate",
-		"generate": "prisma generate"
+		"vercel-build": "pnpm run migrate && pnpm run build",
+		"migrate": "prisma migrate deploy --preview-feature && prisma generate"
 	},
 	"dependencies": {
 		"@auth/prisma-adapter": "^1.0.10",
