--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"lint": "next lint",
 		"test": "playwright test",
 		"vercel-build": "pnpm run migrate && pnpm run build",
-		"migrate": "prisma migrate resolve --rolled-back '20231211085809_admin' prisma migrate deploy --preview-feature && prisma generate"
+		"migrate": "prisma migrate deploy --preview-feature && prisma generate"
 	},
 	"dependencies": {
 		"@auth/prisma-adapter": "^1.0.10",
