--- a/package.json
+++ b/package.json
@@ -18,90 +18,92 @@
 		"migrate": "prisma migrate deploy --preview-feature && prisma generate"
 	},
 	"dependencies": {
-		"@auth/prisma-adapter": "^1.0.10",
-		"@aws-sdk/client-s3": "^3.435.0",
-		"@hookform/resolvers": "^3.3.2",
-		"@paddle/paddle-js": "^0.5.5",
+		"@ai-sdk/openai": "^0.0.70",
+		"@auth/prisma-adapter": "^2.7.2",
+		"@aws-sdk/client-s3": "^3.682.0",
+		"@hookform/resolvers": "^3.9.1",
+		"@node-rs/argon2": "^2.0.0",
+		"@paddle/paddle-js": "^1.3.1",
 		"@pinecone-database/doc-splitter": "^0.0.1",
-		"@pinecone-database/pinecone": "^1.1.2",
-		"@prisma/client": "^5.9.1",
-		"@radix-ui/react-avatar": "^1.0.4",
-		"@radix-ui/react-dialog": "1.0.4",
-		"@radix-ui/react-dropdown-menu": "^2.0.6",
-		"@radix-ui/react-label": "^2.0.2",
-		"@radix-ui/react-popover": "^1.0.7",
-		"@radix-ui/react-radio-group": "^1.1.3",
-		"@radix-ui/react-scroll-area": "^1.0.5",
-		"@radix-ui/react-separator": "^1.0.3",
-		"@radix-ui/react-slot": "^1.0.2",
-		"@radix-ui/react-tabs": "^1.0.4",
-		"@radix-ui/react-tooltip": "^1.0.7",
-		"@radix-ui/themes": "^2.0.0",
-		"@react-email/body": "^0.0.7",
-		"@react-email/components": "^0.0.14",
-		"@react-email/container": "^0.0.11",
-		"@react-email/font": "^0.0.5",
-		"@react-email/head": "^0.0.7",
-		"@react-email/heading": "^0.0.11",
-		"@react-email/hr": "^0.0.7",
-		"@react-email/html": "^0.0.7",
-		"@react-email/img": "^0.0.7",
-		"@react-email/link": "^0.0.7",
-		"@react-email/render": "0.0.9",
-		"@react-email/section": "^0.0.11",
-		"@react-email/text": "^0.0.7",
-		"@t3-oss/env-nextjs": "^0.7.1",
-		"@tanstack/react-query": "^5.0.5",
-		"@vercel/analytics": "^1.1.1",
-		"@vercel/speed-insights": "^1.0.0",
-		"ai": "^2.2.30",
-		"argon2": "^0.31.2",
+		"@pinecone-database/pinecone": "^4.0.0",
+		"@prisma/client": "^5.21.1",
+		"@radix-ui/react-avatar": "^1.1.1",
+		"@radix-ui/react-dialog": "1.1.2",
+		"@radix-ui/react-dropdown-menu": "^2.1.2",
+		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-popover": "^1.1.2",
+		"@radix-ui/react-radio-group": "^1.2.1",
+		"@radix-ui/react-scroll-area": "^1.2.0",
+		"@radix-ui/react-separator": "^1.1.0",
+		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-tabs": "^1.1.1",
+		"@radix-ui/react-tooltip": "^1.1.3",
+		"@radix-ui/themes": "^3.1.4",
+		"@react-email/body": "^0.0.10",
+		"@react-email/components": "^0.0.26",
+		"@react-email/container": "^0.0.14",
+		"@react-email/font": "^0.0.8",
+		"@react-email/head": "^0.0.11",
+		"@react-email/heading": "^0.0.14",
+		"@react-email/hr": "^0.0.10",
+		"@react-email/html": "^0.0.10",
+		"@react-email/img": "^0.0.10",
+		"@react-email/link": "^0.0.11",
+		"@react-email/render": "1.0.2",
+		"@react-email/section": "^0.0.15",
+		"@react-email/text": "^0.0.10",
+		"@t3-oss/env-nextjs": "^0.11.1",
+		"@tanstack/react-query": "^5.59.16",
+		"@vercel/analytics": "^1.3.2",
+		"@vercel/speed-insights": "^1.0.14",
+		"ai": "^3.4.30",
+		"argon2": "^0.41.1",
 		"class-variance-authority": "^0.7.0",
-		"clsx": "^2.0.0",
-		"geist": "^1.2.0",
-		"langchain": "^0.0.172",
-		"lucide-react": "^0.294.0",
+		"clsx": "^2.1.1",
+		"geist": "^1.3.1",
+		"langchain": "^0.0.150",
+		"lucide-react": "^0.454.0",
 		"md5": "^2.3.0",
-		"next": "^14.2.3",
+		"next": "^14.2.16",
 		"next-auth": "5.0.0-beta.17",
-		"next-nprogress-bar": "^2.1.2",
-		"next-themes": "^0.2.1",
+		"next-nprogress-bar": "^2.3.14",
+		"next-themes": "^0.3.0",
 		"openai-edge": "^1.2.2",
 		"pdf-parse": "^1.1.1",
 		"plaiceholder": "^3.0.0",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-dropzone": "^14.2.3",
-		"react-email": "^2.0.0",
-		"react-hook-form": "^7.48.2",
-		"react-resizable-panels": "^1.0.9",
-		"resend": "^2.0.0",
-		"sharp": "^0.32.6",
-		"sonner": "^1.3.1",
-		"tailwind-merge": "^1.14.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-dropzone": "^14.2.10",
+		"react-email": "^3.0.2",
+		"react-hook-form": "^7.53.1",
+		"react-resizable-panels": "^2.1.6",
+		"resend": "^4.0.0",
+		"sharp": "^0.33.5",
+		"sonner": "^1.5.0",
+		"tailwind-merge": "^2.5.4",
 		"tailwindcss-animate": "^1.0.7",
-		"tailwindcss-animated": "^1.0.1",
-		"zod": "^3.22.4"
+		"tailwindcss-animated": "^1.1.2",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.40.1",
-		"@tanstack/eslint-plugin-query": "^5.0.5",
+		"@playwright/test": "^1.48.2",
+		"@tanstack/eslint-plugin-query": "^5.59.7",
 		"@types/md5": "^2.3.5",
-		"@types/node": "^20.10.4",
-		"@types/react": "^18.2.42",
-		"@types/react-dom": "^18.2.17",
-		"@typescript-eslint/parser": "^6.13.2",
-		"autoprefixer": "^10.4.16",
-		"eslint": "^8.55.0",
-		"eslint-config-next": "^14.1.0",
-		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-tailwindcss": "^3.13.0",
-		"postcss": "^8.4.32",
-		"prettier": "^3.0.3",
+		"@types/node": "^20.17.5",
+		"@types/react": "^18.3.12",
+		"@types/react-dom": "^18.3.1",
+		"@typescript-eslint/parser": "^8.12.2",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^8.57.1",
+		"eslint-config-next": "^14.2.16",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-tailwindcss": "^3.17.5",
+		"postcss": "^8.4.47",
+		"prettier": "^3.3.3",
 		"prettier-plugin-prisma": "^5.0.0",
-		"prettier-plugin-tailwindcss": "^0.5.6",
-		"prisma": "^5.9.1",
-		"tailwindcss": "^3.4.1",
-		"typescript": "^5.3.3"
+		"prettier-plugin-tailwindcss": "^0.6.8",
+		"prisma": "^5.21.1",
+		"tailwindcss": "^3.4.14",
+		"typescript": "^5.6.3"
 	}
 }
